--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,6 +31,8 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  sqlite: any
+  path_provider: any
 
 
   # The following adds the Cupertino Icons font to your application.
